--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 html,
-body,
-canvas {
+body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	background: #0e0e0e;
+}
+
+canvas {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
