--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
 	src: url("./fonts/Futura.otf") format("opentype");
 }
 
+@font-face {
+	font-family: "Impact";
+	src: url("./fonts/Impact.ttf") format("truetype");
+}
+
 html,
 body {
 	margin: 0;
